--- a/gamedata/configs/items/settings/exo_power_cfg.ltx
+++ b/gamedata/configs/items/settings/exo_power_cfg.ltx
@@ -6,10 +6,10 @@ power_cost                              = 20
 power_duration                          = 8
 power_cooldown                          = 20
 power_start                             = exo_powers.activate_speed
-power_start                             = exo_powers.deactivate_speed
+power_end                               = exo_powers.deactivate_speed
 [tank]:sprint
 power_start                             = exo_powers.activate_tank
-power_start                             = exo_powers.deactivate_tank
+power_end                               = exo_powers.deactivate_tank
 [recharge]:sprint
 power_duration                          = 1
 snd_windup                              = device\bridge\motor_start
@@ -17,4 +17,4 @@ snd_duration                            = anomaly\electra_blast
 snd_cooldown                            = device\bridge\motor_stop
 radius                                  = 10
 power_start                             = exo_powers.activate_blast
-power_start                             = exo_powers.deactivate_blast
+power_end                               = exo_powers.deactivate_blast
