--- a/gamedata/configs/items/settings/exo_devices.ltx
+++ b/gamedata/configs/items/settings/exo_devices.ltx
@@ -1,14 +1,38 @@
-[dev_props]
-exo_power_supply                   = 0.95,150   
-exo_power_supply_military	       = 0.7,300
-exo_power_supply_proto  	       = 0.2,250
-exo_power_supply_tank     	       = 0.7,300
-exo_power_supply_sprint  	       = 0.7,300
+; [dev_props]
+; exo_power_supply                   = 0.95,150   
+; exo_power_supply_military	       = 0.7,300
+; exo_power_supply_proto  	       = 0.2,250
+; exo_power_supply_tank     	       = 0.7,300
+; exo_power_supply_sprint  	       = 0.7,300
 
-[spec_props]
-exo_power_supply_proto             = recharge
-exo_power_supply_tank              = tank
-exo_power_supply_sprint            = sprint ;electra.ppe
+; [exo_power_supply]
+; drain                  = 0.98
+; capacity               = 50
+
+; [exo_power_supply_military]
+; drain                  = 0.8
+; capacity               = 150
+
+; [exo_power_supply_proto]
+; drain                  = 0.2
+; capacity               = 0
+; power                  = recharge
+
+; [exo_power_supply_tank]
+; drain                  = 1.2
+; capacity               = 200
+; power                  = tank
+
+; [exo_power_supply_sprint]
+; drain                  = 1.05
+; capacity               = 150
+; power                  = sprint
+
+
+; [spec_props]
+; exo_power_supply_proto             = recharge
+; exo_power_supply_tank              = tank
+; exo_power_supply_sprint            = sprint ;electra.ppe
 
 [suit_drain]
 exo_outfit                              = 0.025
